# vulkan-examples-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  vk_layer_settings.txt
.github/workflows/: build.yml
crates/examples/gpu_particles/: Cargo.toml
crates/examples/gpu_particles/shaders/: shader.comp  shader.comp.spv  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
crates/examples/gpu_particles/src/: main.rs
crates/examples/hdr_skybox/: Cargo.toml  README.md
crates/examples/hdr_skybox/shaders/: calibration.frag  calibration.frag.spv  final.frag  final.frag.spv  fullscreen.vert  fullscreen.vert.spv  shader.frag  shader.vert  skybox.frag.spv  skybox.vert.spv  tonemap.frag  tonemap.frag.spv
crates/examples/hdr_skybox/src/: main.rs
crates/examples/mandelbrot/: Cargo.toml
crates/examples/mandelbrot/shaders/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
crates/examples/mandelbrot/src/: main.rs
crates/examples/rt_reflections/: Cargo.toml
crates/examples/rt_reflections/shaders/: closesthit.rchit.spv  miss.rmiss.spv  raygen.rgen  raygen.rgen.spv  shadow.rmiss.spv
crates/examples/rt_reflections/src/: main.rs
crates/examples/rt_shadows/: Cargo.toml
crates/examples/rt_shadows/shaders/: closesthit.rchit  closesthit.rchit.spv  miss.rmiss  miss.rmiss.spv  raygen.rgen  raygen.rgen.spv  shadow.rmiss.spv
crates/examples/rt_shadows/src/: main.rs
crates/examples/rt_triangle/: Cargo.toml
crates/examples/rt_triangle/shaders/: closesthit.rchit  closesthit.rchit.spv  miss.rmiss  miss.rmiss.spv  raygen.rgen  raygen.rgen.spv
crates/examples/rt_triangle/src/: main.rs
crates/examples/triangle/: Cargo.toml
crates/examples/triangle/shaders/: shader.frag.spv  shader.vert  shader.vert.spv
crates/examples/triangle/src/: main.rs
crates/examples/wboit/: Cargo.toml  README.md
crates/examples/wboit/shaders/: composite.frag  composite.frag.spv  fullscreen.vert.spv  geom.vert  geom.vert.spv  shader.frag  shader.frag.spv  wboit.frag  wboit.frag.spv
crates/examples/wboit/src/: main.rs
crates/libs/app/: Cargo.toml
crates/libs/app/src/: camera.rs  lib.rs
crates/libs/gltf/: Cargo.toml
crates/libs/gltf/src/: image.rs  lib.rs  material.rs  texture.rs
crates/libs/gui/: Cargo.toml
crates/libs/gui/src/: lib.rs
crates/libs/vulkan/: Cargo.toml
crates/libs/vulkan/src/: buffer.rs  command.rs  context.rs  descriptor.rs  device.rs  image.rs  instance.rs  lib.rs  physical_device.rs  query.rs  queue.rs  sampler.rs  surface.rs  swapchain.rs  sync.rs  utils.rs
crates/libs/vulkan/src/pipeline/: compute.rs  graphics.rs  layout.rs  mod.rs  shader.rs
crates/libs/vulkan/src/ray_tracing/: acceleration_structure.rs  mod.rs  pipeline.rs  shader_binding_table.rs
scripts/: compile_shaders.ps1  compile_shaders.sh  debug.ps1  debug.sh  run.ps1  run.sh
