[workspace]
members = [
    "crates/examples/rt_triangle",
    "crates/examples/rt_shadows",
    "crates/examples/rt_reflections",
    "crates/examples/triangle",
    "crates/examples/gpu_particles",
    "crates/examples/mandelbrot",
    "crates/libs/*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Adrien Bennadji <adrien.bennadji@live.fr>"]

[workspace.dependencies]
log = "0.4"
simple_logger = "4.0"
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
num_cpus = "1.13"
rand = "0.8"

gltf = "1.0"
glam = { version = "0.22", features = ["serde"] }

winit = "0.27"
ash = { version = "0.37", features = ["linked"] }
ash-window = "0.12"
raw-window-handle = "0.5"
gpu-allocator = { version = "0.21", default-features = false, features = ["vulkan"] }

imgui = "0.9"
imgui-winit-support = "0.9"
imgui-rs-vulkan-renderer = { version = "1.6", features = ["gpu-allocator", "dynamic-rendering"] }
