[workspace]
members = [
    "crates/examples/rt_triangle",
    "crates/examples/rt_shadows",
    "crates/examples/rt_reflections",
    "crates/examples/triangle",
    "crates/examples/gpu_particles",
    "crates/examples/mandelbrot",
    "crates/libs/*",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Adrien Bennadji <adrien.bennadji@live.fr>"]
rust-version = "1.77"

[workspace.dependencies]
log = "0.4"
simple_logger = "4.0"
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
num_cpus = "1.13"
rand = "0.8"
image = "0.25"

gltf = "1.0"
glam = { version = "0.27", features = ["serde"] }

winit = { version = "0.29", default-features = false, features = ["rwh_05", "x11", "wayland", "wayland-dlopen", "wayland-csd-adwaita"]}
ash = { version = "0.37", default-features = false, features = ["debug", "linked"] }
ash-window = "0.12"
raw-window-handle = "0.5"
gpu-allocator = { version = "0.25", default-features = false, features = ["vulkan"] }

egui = "0.27"
egui_plot = "0.27"
egui-winit = "0.27"
egui-ash-renderer = { version = "0.2.0", features = ["gpu-allocator", "dynamic-rendering"]}
