[workspace]
members = [
    "crates/examples/*",
    "crates/libs/*",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Adrien Bennadji <adrien.bennadji@live.fr>"]
rust-version = "1.77"

[workspace.dependencies]
log = "0.4"
simplelog = "0.12"
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
num_cpus = "1.13"
rand = "0.8"
image = "0.25"
rfd = "0.14"

gltf = { version = "1.0", features = ["KHR_lights_punctual"] } 
glam = { version = "0.28", features = ["serde"] }

winit = "0.29"
ash =  "0.38"
ash-window = "0.13"
raw-window-handle = "0.6"
gpu-allocator = { version = "0.27", default-features = false, features = ["vulkan"] }

egui = "0.28"
egui_plot = "0.28"
egui-winit = "0.28"
egui-ash-renderer = { version = "0.5", features = ["gpu-allocator", "dynamic-rendering"] }
