[package]
name = "hdr_skybox"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../../libs/app" }
gui = { path = "../../libs/gui" }

log.workspace = true
image.workspace = true
rfd.workspace = true
