[package]
name = "rt_shadows"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../../libs/app" }
vulkan = { path = "../../libs/vulkan" }
gltf = { path = "../../libs/gltf" }
gui = { path = "../../libs/gui" }
