[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simple_logger = "2.1"
anyhow = "1.0"
winit = "0.26"
glam = "0.21"

vulkan = { path = "../vulkan" }
gui = { path = "../gui" }
