[package]
name = "gui"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
anyhow.workspace = true
winit.workspace = true
egui.workspace = true
egui-winit.workspace = true
egui-ash-renderer.workspace = true

vulkan = { path = "../vulkan" }
