[package]
name = "vulkan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
anyhow = "1.0"
ash = { version = "0.37", features = ["linked"] }
ash-window = "0.10"
raw-window-handle = "0.4"
gpu-allocator = { version = "0.18", default-features = false, features = ["vulkan"] }
