[package]
name = "vulkan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
anyhow.workspace = true
ash.workspace = true
ash-window.workspace = true
raw-window-handle.workspace = true
gpu-allocator.workspace = true
